<resources>
    <string name="app_name">Nabla TypeMath</string>
    <string name="nabla_activity_name">Nabla</string>
    <string name="symbols_activity_name">Symbols</string>
    <string name="setting_activity_name">Setting</string>
    <string name="help_activity_name">Help</string>
    <string name="custom_command_activity_name">Custom Command</string>
    <string name="title_text">∇ NABLA</string>

    <string name="service_info_label">SERVICE :&#160;</string>
    <string name="service_info_label_on">ON</string>
    <string name="service_info_label_off">OFF</string>

    <string name="allow_permission">Accessibility Permission</string>
    <string name="accessibility_service_label">Nabla TypeMath Service</string>
    <string name="accessibility_service_description">This service will allow Nabla TypeMath to
        observe when user is typing command keywords, so that it can then convert them into
        mathematical symbols. Don\'t worry, whatever you type will never leave the device.
    </string>

    <string name="setting">Setting</string>
    <string name="help">help</string>
    <string name="symbols">Symbols</string>

    <string name="edit_custom_command">Edit Custom Commands</string>
    <string name="custom_commands">Custom Commands</string>
    <string name="save">Save String</string>
    <string name="end_string">End String</string>
    <string name="initial_string">Initial String</string>
    <string name="latex_mode">Latex Mode</string>
    <string name="quick_mode">Quick Mode</string>
    <string name="use_additional_symbol">Use Additional Symbol</string>
    <string name="keep_space">Keep Space</string>
    <string name="use_diacritics">Use Diacritics</string>

    <string name="quick_mode_desc"
        >In Quick mode, <b>End String</b> is not used. You only have to type <b>Init String</b>
        followed by a single command, and press <b>spacebar</b>. For example, using <b>.</b> as
        <b>Init String</b>, you type \".int\" and then press <b>spacebar</b>.
    </string>
    <string name="latex_mode_desc"
        >In LaTeX mode, commands must be prefixed with backslash
        \nFor example: (<b>\\alpha\\in \\mathbb{R}</b>)\n
        \nFor superscript and subscript, use curly brackets (<b>a^{n+1}</b>)
    </string>
    <string name="use_additional_symbol_desc">
        Use additional symbols
    </string>
    <string name="keep_space_desc">Converted text will keep its space
        \n\"<b>A subset B</b>\" will become
        \non &#160;: <b>A ⊂ B</b>
        \noff : <b>A⊂B</b>
    </string>
    <string name="use_diacritics_desc">Diacritics are symbols like <b>ddot (ö)</b> and <b>bar (o̅)</b>
        \nIn simple mode, \"<b>x ddot</b>\" will become <b>ẍ</b>
    </string>
    <string name="edit_custom_command_desc">You can add your own custom commands and symbols,
        you can also overwrite the built-in commands with your own
    </string>

    <string name="service_allow_permission_desc">
        Nabla TypeMath service is off.
        In order for Nabla TypeMath to function properly,
        the service must be turned on by allowing permission.\n
        \nThe permission allows Nabla to observe when user
        is typing the command keywords, so that it can then
        convert them into mathematical symbols.
        \n\nDon\'t worry, whatever you type will never leave the device.
    </string>
    <string name="accessalert_title">Go To Accessibility Setting?</string>
    <string name="accessalert_pos">Go To Accessibility Setting</string>
    <string name="accessalert_neg">Not Now</string>

    <string name="expand_greek_symbols_card">expand greek symbols card</string>
    <string name="command">Command</string>
    <string name="symbol">Symbol</string>
    <string name="additional_symbols">Additional (LatexMode)</string>

    <string name="greek_symbols">Greek Symbols</string>
    <string name="setAndLogic_symbols">Set and Logic</string>
    <string name="domains_symbols">Domains</string>
    <string name="equality_symbols">Equality</string>
    <string name="calculus_symbols">Calculus</string>
    <string name="misc_symbols">Misc</string>
    <string name="basic_symbols">Basic Symbols</string>
    <string name="additionalSymbol_symbols">Additional Symbols</string>
    <string name="diacritics_symbols">Diacritics</string>

    <string name="command_header">Command</string>
    <string name="symbol_header">Symbol</string>
    <string name="custom_command_add_button">+</string>

    <string name="version_info_label">version:</string>
    <string name="nabla_logo_desc">Nabla TypeMath Logo</string>
    <string name="github_button_label">GitHub</string>

    <string name="how_to_use_header">How To Use</string>
    <string name="keep_on_header">Service keep turning off</string>
    <string name="undo_header">Undo Conversion</string>
    <string name="command_and_symbols_header">Commands And Symbols</string>
    <string name="latex_mode_header">LaTeX Mode</string>
    <string name="super_sub_header">Superscript and Subscript</string>
    <string name="diacritics_header">Diacritics</string>

    <string name="support_desc">This project is free and open source. If you like this project,
        you can support the developer by clicking the button below.
        Your support is highly appreciated.
    </string>
    <string name="how_to_use_desc">Type your commands in between <b>init String</b> and <b>end String</b>.
        And then press space to convert it into symbols.\n
        \nSince version 1.3, the default behaviour is using quickMode with \".\" as <b>init String</b>.
        You can write \"<b>.alpha</b>\", press space, and it will be converted into \"<b>α</b>\"\n.
        \n[If not using quickMode] For example, in the default config, <b>init String</b> is \".\",
        and <b>end String</b> is also \".\", you can type \"<b>.alpha ^2 + beta ^2.</b>\", press space,
        and it will be converted into \"<b>α² + β²</b>\".
    </string>
    <string name="keep_on_desc"
        >If the app services keeps turning off on its own, it\'s because your system is force
        stopping it because it\'s been idle for too long. To keep the service on, turn off battery
        optimization for this app. You can find that in your system setting, usually on
        \n<b>Settings > Battery. Tap MORE (upper-right) > Optimize battery usage</b>.
    </string>
    <string name="undo_desc">If you accidentally converted a text, or simply just want to undo the conversion,
        just press <b>backspace</b> immediately after the conversion is done,
        and the text will be converted back.
    </string>
    <string name="command_and_symbols_desc">Symbols and its corresponding command is available in Symbols menu that can be accessed from main menu.
        By default, <b>Additional Symbols</b> is not being used, but can be changed in the setting menu.
    </string>
    <string name="super_sub_desc">Subscript and superscript is invoked using caret (^) and underscore (_).\n
        \nIn quick mode (default), write ^ and _ after <b>init String</b>, for example \"<b>.^2+i</b>\"\n
        \nIn normal mode, all character will be converted until space, for example
        \"<b>x^2+n y^n</b>\" will be converted into \"<b>x²⁺ⁿyⁿ</b>\" while
        \"<b>x^2 +n y^n</b>\" will be converted into \"<b>x²+nyⁿ</b>\".\n
        \nNot all character is available as subscript or superscript in unicode, in that case
        the character will not be converted. In the case of \"<b>q</b>\", since both its subscript
        and superscript is not available, it will be converted into subscript and superscript
        version of \"<b>θ</b>\" (this is intentional).
    </string>
    <string name="diacritics_desc">In quick mode (default), diacritic can be written after the symbol,
        for example\"<b>x.dot</b>\" for \"<b>ẍ</b>\", or \"<b>o.bar</b>\" for \"<b>o̅</b>\".
        \nIn normal mode, diacritic is written after the symbol, for example
        \"<b>x dot</b>\" for \"<b>ẍ</b>\", or \"<b>o bar</b>\" for \"<b>o̅</b>\".
        \nIn LaTeX mode, use \"<b>\\ddot{x}</b>\" and \"<b>\\bar{o}</b>\".
    </string>

    <string name="author_label">Author</string>
    <string name="author_name">Rayhan A. Azizi</string>
    <string name="interface_theme">Interface Theme</string>
    <string name="rate_on_google_play">Rate on GOOGLE PLAY</string>
    <string name="donate">DONATE</string>
    <string name="import_export_custom_command">IMPORT / EXPORT</string>
    <string name="copy_str">COPY</string>
    <string name="paste">PASTE</string>
    <string name="gson_file">GSON File</string>

    <string name="port_desc"
        >To save/export your custom commands, copy the text above, then save it into a text file
        or share it somewhere.
        \nTo import a custom commands, copy the text that you want to import, paste it here,
        and then press IMPORT.
    </string>
    <string name="import_label">import</string>
</resources>
