<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="36dp"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/nabla_logo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:srcCompat="@drawable/typemath_icon"
                    android:contentDescription="@string/nabla_logo_desc" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:paddingTop="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nabla_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/app_name"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/nabla_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version_info_label" />

                    <TextView
                        android:id="@+id/author_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/author_label"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/author_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author_name" />
                    <Button
                        android:id="@+id/github_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/github_button_label" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/support_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="4dp"
                android:text="@string/support_desc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_vertical"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/rate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="10"
                    android:text="@string/rate_on_google_play"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/donate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:text="@string/donate"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/how_to_use_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/how_to_use_header"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/how_to_use_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_to_use_desc" />

            <TextView
                android:id="@+id/keep_on_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/keep_on_header"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/keep_on_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keep_on_desc" />
            <TextView
                android:id="@+id/help_undo_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/undo_header"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/help_undo_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/undo_desc" />

            <TextView
                android:id="@+id/help_commands_and_symbols_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/command_and_symbols_header"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/help_commands_and_symbols_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/command_and_symbols_desc"/>

            <TextView
                android:id="@+id/help_latex_mode_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/latex_mode_header"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/help_latex_mode_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/latex_mode_desc"/>

            <TextView
                android:id="@+id/help_super_sub_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/super_sub_header"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/help_super_sub_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/super_sub_desc"/>

            <TextView
                android:id="@+id/help_diacritics_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/diacritics_header"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/help_diacritics_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diacritics_desc"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>