<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/title_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/allowPermissionButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/allowPermissionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allow_permission"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <Button
        android:id="@+id/gotoSettingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/setting"
        app:layout_constraintEnd_toEndOf="@+id/allowPermissionButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/allowPermissionButton"
        app:layout_constraintTop_toBottomOf="@+id/allowPermissionButton" />

    <Button
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/help"
        app:layout_constraintEnd_toEndOf="@+id/allowPermissionButton"
        app:layout_constraintStart_toStartOf="@+id/allowPermissionButton"
        app:layout_constraintTop_toBottomOf="@+id/gotoSettingButton" />

    <Button
        android:id="@+id/symbolsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/symbols"
        app:layout_constraintEnd_toEndOf="@+id/allowPermissionButton"
        app:layout_constraintStart_toStartOf="@+id/allowPermissionButton"
        app:layout_constraintTop_toBottomOf="@+id/helpButton" />


</androidx.constraintlayout.widget.ConstraintLayout>