<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SymbolsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/base_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/base_cardView"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="16dp">

                    <TextView
                        android:id="@+id/greekSymbol_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/greek_symbols"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintVertical_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/greekSymbol_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@+id/greekSymbol_label"
                        app:layout_constraintBottom_toBottomOf="@+id/greekSymbol_label"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/greekSymbol_label"
                        app:layout_constraintHorizontal_bias="1"
                        app:srcCompat="@drawable/ic_baseline_expand_more_24"
                        android:contentDescription="@string/expand_greek_symbols_card" />

                    <LinearLayout
                        android:id="@+id/greekSymbol_view"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/greekSymbol_label">

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="8dp" />

                        <TableLayout
                            android:id="@+id/greekSymbol_table"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                tools:ignore="UselessParent">

                                <TextView
                                    android:id="@+id/greekSymbol_command_label"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="24dp"
                                    android:text="@string/command"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/greekSymbol_symbol_label"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/symbol"
                                    android:textStyle="bold" />
                            </TableRow>
                        </TableLayout>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>